<resources>
    <string name="app_name">Valorant Guia</string>
    <string name="agents">Agentes</string>
    <string name="maps">Mapas</string>
    <string name="arsenal">Arsenal</string>
    <string name="biography">// Biografia</string>
    <string name="special_abilities">// Habilidades especiais</string>
    <string name="damage_range">// Dano</string>
    <string name="skins">// Skins</string>
    <string name="title_agents">Escolha Seu <font color="#FF4457">Agente</font> Favorito</string>
    <string name="initiator">Iniciador</string>
    <string name="duelist">Duelista</string>
    <string name="sentinel">Sentinela</string>
    <string name="controller">Controlador</string>
    <string name="head">Cabeça</string>
    <string name="leg">Pernas</string>
    <string name="body">Corpo</string>
    <string name="failResponse">Tente novamente mais tarde"</string>
    <string name="internet">Verifique sua conexão</string>
</resources>